# backend/src/controllers/user.controller.ts
@@ -1,15 +1,14 @@
 import * as express from 'express';
 import { Body, Controller, Get, Post, Request, Route, Security } from 'tsoa';
 
-import { RequestBody, User } from '../interfaces/user';
+import { User } from '../interfaces/user';
 import { inject, ProvideSingleton } from '../ioc';
-import { TestService } from '../services/test.service';
-import { createUser, getUser } from '../services/user.service';
+import { UserService } from '../services/user.service';
 
 @Route('users')
 @ProvideSingleton(UsersController)
 export class UsersController extends Controller {
-  constructor(@inject(TestService) private test: TestService) {
+  constructor(@inject(UserService) private user: UserService) {
     super();
   }
 
@@ -23,28 +22,26 @@ export class UsersController extends Controller {
    * @memberof UsersController
    */
   @Get('/{id}')
-  @Security('auth')
-  public getUser(id: number, @Request() request: express.Request): User | {} {
-    console.log(request.user);
-
-    this.test.sample();
-
-    return { user: getUser(id), request };
+  @Security('bearer')
+  async getUser(
+    id: number,
+    @Request() _request: express.Request
+  ): Promise<User | {}> {
+    return await this.user.find(id);
   }
 
   /**
    * 新しいユーザーを作成
    *
    * @summary 新規ユーザー作成
-   * @param {RequestBody} requestBody
+   * @param {any} requestBody
    * @returns {string}
    * @memberof UsersController
    */
-  @Post('/create')
-  @Security('auth')
-  public createUser(@Body() requestBody: RequestBody): string {
-    createUser(requestBody);
-    this.test.sample();
+  @Post('/')
+  @Security('bearer')
+  async createUser(@Body() _requestBody: any): Promise<string> {
+    await this.user.create();
     return 'success';
   }
 }
